Fixed signup button alignment and setup interfaces:

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -59,7 +59,7 @@
     background-color: #2d7536;
     height: 2.5rem;
     width: 8rem;
-    margin-left: 6.3rem;
+    margin-left: 6.6rem;
     margin-top: .5rem;
     font-size: 14pt;
     border: 0;
